============================================================================

     iso2mesh - a powerful yet simple-to-use mesh generator

----------------------------------------------------------------------------

iso2mesh ChangeLog (key features marked by *):
2011/01/31 (1.0.0-RC1, codename: Tofu)
        1.*specifying seeds for cgalsurf and cgalmesh modules
        2.*perturbing isovalues to avoid non-manifold geometries
        3. added plottetview to call tetview for mesh display on octave
        4. added a new demo - a "hello world" example
        5. speed optimization for octave
        6. optimized memory use for surf2vol
        7. made nodevolume support surfaces
        8. added savemedit to export tetrahedral mesh in Medit format
        9. compress most binaries with upx to save space
       10. set up binary file extension fallback to help Mac users
       11.*added functions to mesh simple geometries such as a sphere etc
       12. added meshmerge to merge multiple meshes and surfaces
       13. added s2v shortcut for surf2vol
       14. updated cgalsurf to specify initial point cloud size

2010/07/14 (0.9.8, codename: Tofu-beta)
        1.*added surf2vol, converting a closed surface to a binary volume
        2. fixed deletemeshfile bug for Windows
        3. automatic repairing when meshresample fails
        4. fast faceneighbors unit
        5.*added CGAL 3D mesher for robust meshing of segmented volumes
        6. added CGAL 3D polyhedral mesher as an alternative to tetgen
        7. corrected bugs in Laplacian-HC and Lowpass smoothing algorithms
        8. added sms.m as the shortcut for surfsmooth
        9. added exporters for DXF and VRML mesh formats
       10. added user name to the temporary files to avoid permission conflict
       11. added force-bounding-box option for surf2mesh
       12. added nodevolume, elemvolume from FEMcore and meshreorient
       13. added sortmesh to optimize node and element ordering